[build-system]
build-backend = "setuptools.build_meta"
requires = ["numpy >= 2.0.0", "setuptools", "setuptools-scm"]

[project]
authors = [{name = "Devon P. Ryan", email = "dryan79@gmail.com"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "Programming Language :: C",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]
description = "A package for accessing bigWig files using libBigWig"
keywords = ["bioinformatics", "bigWig", "bigBed"]
name = "pyBigWig"
version = "0.3.24"
readme = "README.md"
requires-python = ">=3.9"

[project.license]
text = "MIT"

[project.urls]
"Bug Tracker" = "https://github.com/deeptools/pyBigWig/issues"
"Download" = "https://pypi.python.org/pypi/pyBigWig"
"Homepage" = "https://github.com/deeptools/pyBigWig"

[tool.setuptools]
# Override setuptools autodiscovery algorithm
# Only include package test data/source for wheel distribution
include-package-data = true
packages = ["pyBigWigTest"]

# Enable version inference from scm
[tool.setuptools_scm]

# Target only minimum CPython version 3.9 on linux for wheel build
[tool.cibuildwheel]
skip = "pp* cp38-* *-manylinux_i686 *_ppc64le *_s390x *-musllinux_x86_64 *-musllinux_i686"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
